Fix icons on mobile.

--- a/public/styles.css
+++ b/public/styles.css
@@ -135,14 +135,17 @@ input[type=text]:focus {
 
 input[type=checkbox] { display:none; }
 input[type=checkbox] + label:before {
-  font-family: FontAwesome;
+  font-family: "Font Awesome 5 Free", FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
   display: inline-block;
 }
 
-input[type=checkbox] + label:before { content: "\f096"; }
+input[type=checkbox] + label:before { content: '\f096'; }
 input[type=checkbox] + label:before { letter-spacing: 10px; }
 
-input[type=checkbox]:checked + label:before { content: "\f046"; }
+input[type=checkbox]:checked + label:before { content: '\f046'; }
 input[type=checkbox]:checked + label:before { letter-spacing: 8px; }
 
 #code {
